[package]
name = "rrem_fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
log = "0.4.19"
flume = "0.10.14"
clap = { version = "4.3.3", features = ["string"] }
simplelog = "0.12.0"