[package]
name = "duplis"
version = "0.1.0"
edition = "2021"
description="a program to find file duplicates"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
log = { version = "0.4.19", features = ["std"] }
flume = "0.10.14"
clap = { version = "4.3.3", features = ["string"] }
dashmap = "5.4.0"

[profile.dev.package.xxhash-rust]
opt-level=3

[profile.release]
strip=true
opt-level="z"
lto=true

[profile.perfrelease]
inherits = "release"
debug=true